# autospotify

./: .env.example  .gitignore  README.md  accounts.csv.example  app.py  app_proton.py  app_spotify.py  format.ps1  format.sh  install.py  lint.py  pyproject.toml  requirements.txt  run_proton.py  run_tempmail.py  settings.py  sockets.py  users.csv.example
.github/workflows/: pyinstaller.yml
automations/: protonmail.py  spotify.py  spotify_playlist.py  spotify_playlist_2v.py  spotify_signup.py  tempmail.py  webmail_login.py  webmail_signup.py
autospotify/: __init__.py  __main__.py  settings.py
autospotify/automations/: spotify_playlist.py  spotify_signup.py  webmail_login.py  webmail_signup.py
autospotify/constants/: __init__.py
autospotify/exceptions/: __init__.py
autospotify/utils/: browser.py  captcha_solver.py  chrome_proxy.py  files.py  logs.py  proxies.py  schemas.py
autospotify/utils/base/: __init__.py  form.py  time.py
autospotify/utils/base/automation/: spotify.py  webmail.py
common/: base_playwright.py  proxies.py  save_in_file.py  user.py
data/: generators.py
exceptions/: __init__.py  possible_exceptions.py
shared/: base.py  files.py  proxies.py
utils/: base.py  files.py  logs.py  proxies.py  schemas.py
utils/base/: __init__.py  form.py  typer.py
utils/base/automation/: spotify.py
