[project]
name = "spotify-automation"
version = "0.1.0"
description = "a spotify automation"
authors = [
    {name = "Carlos Mateus",email = "carlosmatateumateus@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "selenium (>=4.28.1,<5.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "art (>=6.4,<7.0)",
    "phone-gen (>=3.0.12,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "chrome-extension-python (>=1.0.1,<2.0.0)",
    "fake-useragent (>=2.0.3,<3.0.0)",
    "faker (>=36.1.1,<37.0.0)",
    "selenium-proxy-utils (>=0.0.1,<0.0.2)",
    "twocaptcha-extension-python (>=1.0.1,<2.0.0)",
    "scipy (>=1.15.1,<2.0.0)"
]

[tool.taskipy.tasks]
lint = "python lint.py"
run = "python app.py"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
