[project]
name = "autospotify"
version = "0.0.1"
description = "a spotify automation"
authors = [
    {name = "Carlos Mateus",email = "hi@carlosmateus.fr"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
dependencies = [
    "selenium (>=4.28.1,<5.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "art (>=6.4,<7.0)",
    "phone-gen (>=3.0.12,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "faker (>=36.1.1,<37.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "setuptools (>=75.8.0,<76.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "chrome-extension (>=1.0.1,<2.0.0)",
    "undetected (==0.0.2)",
    "keyboard (>=0.13.5,<0.14.0)",
]

[tool.taskipy.tasks]
lint = "black autospotify/ && isort autospotify/"
run = "python -m autospotify"
build = "poetry run pyinstaller autospotify/__main__.py --onefile --name autospotify --collect-submodules autospotify --icon=assets/logo.ico"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
pyinstaller = "^6.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
